# unipax

./: CMakeLists.txt  CTestConfig.cmake  README.md
source/APPLICATIONS/EXAMPLES/MAPPING/: CMakeLists.txt  main.cpp
source/APPLICATIONS/IMPORT/BIOPAXIMPORTER/: CMakeLists.txt  main.cpp
source/APPLICATIONS/IMPORT/DBCREATOR/: CMakeLists.txt  main.cpp
source/APPLICATIONS/IMPORT/SBMLIMPORTER/: CMakeLists.txt  main.cpp
source/APPLICATIONS/SERVER/REST/: CMakeLists.txt  main.cpp
source/PLUGINS/REST/: CMakeLists.txt
source/PLUGINS/REST/BENCHMARKSERVERHANDLER/: BenchmarkServerHandler.cpp  CMakeLists.txt
source/PLUGINS/REST/DATAUPLOADSERVERHANDLER/: CMakeLists.txt  DataUploadServerHandler.cpp
source/PLUGINS/REST/GETOBJECTSERVERHANDLER/: CMakeLists.txt  GetObjectServerHandler.cpp
source/PLUGINS/REST/GRAPHALGORITHMSERVERHANDLER/: CMakeLists.txt  GraphAlgorithmServerHandler.cpp
source/PLUGINS/REST/GRAPHMAPPINGSERVERHANDLER/: CMakeLists.txt  GraphMappingServerHandler.cpp
source/PLUGINS/REST/PATHWAYSOFSERVERHANDLER/: CMakeLists.txt  PathwaysOfServerHandler.cpp
source/PLUGINS/REST/RESULTOBJECTSERVERHANDLER/: CMakeLists.txt  ResultObjectServerHandler.cpp
source/PLUGINS/REST/SEARCHSERVERHANDLER/: CMakeLists.txt  SearchServerHandler.cpp
source/UNIPAX/: CMakeLists.txt
source/UNIPAX/COMMON/: DBConnector.cpp  KernelClassSet.cpp  KernelCollector.cpp  MergerInputAdapter.cpp  OrganismSet.cpp  PathwaySet.cpp  PersistenceManager.cpp  sources.cmake
source/UNIPAX/GRAPH/: sources.cmake
source/UNIPAX/GRAPH/LEMON/: RecursiveEnumerationAlgorithm.cpp  sources.cmake
source/UNIPAX/GRAPH/MAPPING/: MappingEngine.cpp  sources.cmake
source/UNIPAX/GRAPH/MAPPING/MYSQL/: MySQLMappingEngine.cpp  sources.cmake
source/UNIPAX/GRAPH/MAPPING/ORACLE/: OracleMappingEngine.cpp  sources.cmake
source/UNIPAX/IMPORT/: BridgeDBLinkREST.cpp  BridgeDBWrapper.cpp  UniProtReader.cpp  sources.cmake
source/UNIPAX/IMPORT/BIOPAX/: BIOPAXReader.cpp  BIOPAXReaderHandler.cpp  BIOPAXWriter.cpp  sources.cmake
source/UNIPAX/IMPORT/GENESET/: GeneSetWriter.cpp  sources.cmake
source/UNIPAX/IMPORT/GRAPHML/: GraphMLWriter.cpp  sources.cmake
source/UNIPAX/IMPORT/MZTAB/: MzTabReader.cpp  sources.cmake
source/UNIPAX/IMPORT/SBML/: MiriamLinkREST.cpp  SBMLConfigHandler.cpp  SBMLReader.cpp  SBMLReaderHandler.cpp  sources.cmake
source/UNIPAX/IMPORT/TFENCYCLOPEDIA/: TFEncyclopediaReader.cpp  sources.cmake
source/UNIPAX/KERNEL/: Kernel.cpp  sources.cmake
source/UNIPAX/KERNEL/BIOPAX/: BindingFeature.cpp  BioSource.cpp  BiochemicalPathwayStep.cpp  BiochemicalReaction.cpp  Catalysis.cpp  CellVocabulary.cpp  CellularLocationVocabulary.cpp  ChemicalStructure.cpp  Complex.cpp  ComplexAssembly.cpp  Control.cpp  ControlledVocabulary.cpp  Conversion.cpp  CovalentBindingFeature.cpp  Degradation.cpp  DeltaG.cpp  Dna.cpp  DnaReference.cpp  DnaRegion.cpp  DnaRegionReference.cpp  Entity.cpp  EntityFeature.cpp  EntityReference.cpp  EntityReferenceTypeVocabulary.cpp  Evidence.cpp  EvidenceCodeVocabulary.cpp  ExperimentalForm.cpp  ExperimentalFormVocabulary.cpp  FragmentFeature.cpp  Gene.cpp  GeneticInteraction.cpp  Interaction.cpp  InteractionVocabulary.cpp  KPrime.cpp  ModificationFeature.cpp  Modulation.cpp  MolecularInteraction.cpp  Pathway.cpp  PathwayStep.cpp  PhenotypeVocabulary.cpp  (+30 more)
source/UNIPAX/KERNEL/EXT/: AlgebraicRule.cpp  AssignmentRule.cpp  Constraint.cpp  Delay.cpp  Event.cpp  EventAssignment.cpp  Experiment.cpp  FunctionDefinition.cpp  IdMapping.cpp  ImportSource.cpp  InitialAssignment.cpp  KineticLaw.cpp  LocalParameter.cpp  Math.cpp  Model.cpp  Parameter.cpp  Priority.cpp  RateRule.cpp  ResultObject.cpp  Rule.cpp  SBase.cpp  Sample.cpp  SampleData.cpp  Series.cpp  Trigger.cpp  UIBase.cpp  UPBase.cpp  Unit.cpp  UnitDefinition.cpp  sources.cmake
source/UNIPAX/PERSISTENCE/: DBManager.cpp  ODBLoadRunnable.cpp  ODBPersistRunnable.cpp  ODBRunnable.cpp  ODBUnloadRunnable.cpp  ODBUpdateRunnable.cpp  ODBWorker.cpp  sources.cmake
source/UNIPAX/PERSISTENCE/MYSQL/: MySQLManager.cpp  MySQLODBLoadRunnable.cpp  MySQLODBPersistRunnable.cpp  MySQLODBUnloadRunnable.cpp  MySQLODBUpdateRunnable.cpp  MySQLODBWorker.cpp  sources.cmake
source/UNIPAX/PERSISTENCE/MYSQL/BIOPAX/: BindingFeature-odb.cxx  BioSource-odb.cxx  BiochemicalPathwayStep-odb.cxx  BiochemicalReaction-odb.cxx  Catalysis-odb.cxx  CellVocabulary-odb.cxx  CellularLocationVocabulary-odb.cxx  ChemicalStructure-odb.cxx  Complex-odb.cxx  ComplexAssembly-odb.cxx  Control-odb.cxx  ControlledVocabulary-odb.cxx  Conversion-odb.cxx  CovalentBindingFeature-odb.cxx  Degradation-odb.cxx  DeltaG-odb.cxx  Dna-odb.cxx  Gene-odb.cxx  (+52 more)
source/UNIPAX/PERSISTENCE/ORACLE/: OracleManager.cpp  OracleODBLoadRunnable.cpp  OracleODBPersistRunnable.cpp  OracleODBUpdateRunnable.cpp  OracleODBWorker.cpp  sources.cmake
source/UNIPAX/SERVER/: sources.cmake
source/UNIPAX/SERVER/BACKEND/: QueryEngine.cpp  sources.cmake
source/UNIPAX/SERVER/BROWSER/: UnipaxBrowser.cpp  UnipaxBrowserHandler.cpp  sources.cmake
source/UNIPAX/SERVER/HTTP/: RequestHandler.cpp  http_parser.c  qhttpconnection.cpp  qhttprequest.cpp  qhttpresponse.cpp  qhttpserver.cpp  sources.cmake
source/UNIPAX/SERVER/REST/: RESTServer.cpp  RESTServerHandler.cpp  sources.cmake
source/UNIPAX/cmake/: UniPAXDocumentation.cmake  UniPAXMacros.cmake  UniPAXSources.cmake
source/UNIPAX/doc/: Doxyfile.in
test/: CMakeLists.txt
test/PLUGINS/: sources.cmake
test/PLUGINS/REST/: sources.cmake
test/PLUGINS/REST/GRAPHMAPPINGSERVERHANDLER/: sources.cmake  test_GraphMappingServerHandler.cpp
test/UNIPAX/: sources.cmake
test/UNIPAX/COMMON/: sources.cmake  test_DBConnector.cpp
test/UNIPAX/GRAPH/: sources.cmake
test/UNIPAX/GRAPH/LEMON/: sources.cmake  test_RecursiveEnumerationAlgorithm.cpp
test/UNIPAX/IMPORT/: sources.cmake  test_BridgeDBWrapper.cpp
test/UNIPAX/KERNEL/: sources.cmake
test/UNIPAX/KERNEL/BIOPAX/: sources.cmake  test_BindingFeature.cpp  test_BioSource.cpp  teststub.cpp
test/UNIPAX/KERNEL/EXT/: sources.cmake
test/UNIPAX/PERSISTENCE/: sources.cmake  test_ODBWorker.cpp
test/cmake/: UniPAXTestMacros.cmake
(+1102 files in other folders)
