INCLUDE("cmake/UniPAXTestMacros.cmake")

# Configure GTest and GMock
FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Googlemock REQUIRED)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GOOGLEMOCK_INCLUDE_DIR})
IF (database STREQUAL "oracle")
	INCLUDE_DIRECTORIES(
		${LEMON_INCLUDE_DIR}
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	  ${ODBORACLE_INCLUDE_DIR}
	)
ENDIF (database STREQUAL "oracle")

IF (NOT (database STREQUAL "oracle"))
	INCLUDE_DIRECTORIES(
		${LEMON_INCLUDE_DIR}
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	  ${ODBMYSQL_INCLUDE_DIR}
		${MYSQL_INCLUDE_DIR}
	)
ENDIF (NOT (database STREQUAL "oracle"))

SET(TEST_REQUIRED_LIBRARIES ${GTEST_BOTH_LIBRARIES} ${GOOGLEMOCK_LIBRARY} UniPAX pthread)

INCLUDE("UNIPAX/sources.cmake")
INCLUDE("PLUGINS/sources.cmake")

ADD_CUSTOM_TARGET(build_tests DEPENDS ${TEST_EXECUTABLES})
