ADD_SUBDIRECTORY(GETOBJECTSERVERHANDLER)
ADD_SUBDIRECTORY(GRAPHALGORITHMSERVERHANDLER)
ADD_SUBDIRECTORY(GRAPHMAPPINGSERVERHANDLER)
ADD_SUBDIRECTORY(PATHWAYSOFSERVERHANDLER)
ADD_SUBDIRECTORY(RESULTOBJECTSERVERHANDLER)
ADD_SUBDIRECTORY(SEARCHSERVERHANDLER)
ADD_SUBDIRECTORY(BENCHMARKSERVERHANDLER)
ADD_SUBDIRECTORY(DATAUPLOADSERVERHANDLER)
