PROJECT(Mapping)

SET(SOURCES
	main.cpp
)

MESSAGE(STATUS "Lemon includes: ${LEMON_INCLUDE_DIR}")


IF (database STREQUAL "oracle")	
	INCLUDE_DIRECTORIES(
		${LEMON_INCLUDE_DIR}
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${ODBORACLE_INCLUDE_DIR}
	    ${ORACLE_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	)
ENDIF (database STREQUAL "oracle")

IF (NOT (database STREQUAL "oracle"))
	INCLUDE_DIRECTORIES(
		${LEMON_INCLUDE_DIR}
		${Boost_INCLUDE_DIR}
		${MYSQL_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${ODBMYSQL_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	)
ENDIF (NOT (database STREQUAL "oracle"))


ADD_EXECUTABLE(Mapping ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(Mapping UniPAX)
SET_TARGET_PROPERTIES(Mapping PROPERTIES COMPILE_FLAGS "${UNIPAX_COMPILE_FLAGS} ${UNIPAX_DATABASE_FLAGS}")
SET_TARGET_PROPERTIES(Mapping PROPERTIES LINK_FLAGS    "${UNIPAX_LINK_FLAGS}")
