PROJECT(DBCreator)

SET(SOURCES
	main.cpp
)


IF (database STREQUAL "oracle")	
	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBORACLE_INCLUDE_DIR}
	    ${ORACLE_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	)
ENDIF (database STREQUAL "oracle")

IF (NOT (database STREQUAL "oracle"))
	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${MYSQL_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBMYSQL_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	)
ENDIF (NOT (database STREQUAL "oracle"))


ADD_EXECUTABLE(DBCreator ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(DBCreator UniPAX ${QT_QTSQL_LIBRARY})
SET_TARGET_PROPERTIES(DBCreator PROPERTIES COMPILE_FLAGS "${UNIPAX_COMPILE_FLAGS} ${UNIPAX_DATABASE_FLAGS}")
SET_TARGET_PROPERTIES(DBCreator PROPERTIES LINK_FLAGS    "${UNIPAX_LINK_FLAGS}")

cm_export_file("../../../../include/UNIPAX/PERSISTENCE/MYSQL/UniPAX_MySQL.sql" "../../../../schemata/")
cm_export_file("../../../../include/UNIPAX/PERSISTENCE/ORACLE/UniPAX_Oracle.sql" "../../../../schemata/")
