PROJECT(RESTServer)

SET(SOURCES
	main.cpp
)

IF (database STREQUAL "oracle")
	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	    ${ODBORACLE_INCLUDE_DIR}
	    ${ORACLE_INCLUDE_DIR}
	)
ENDIF (database STREQUAL "oracle")

IF (NOT (database STREQUAL "oracle"))

	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
		${SBML_INCLUDE_DIR}
	    ${ODBMYSQL_INCLUDE_DIR}
		${MYSQL_INCLUDE_DIR}
	)
ENDIF (NOT (database STREQUAL "oracle"))


ADD_EXECUTABLE(RESTServer ${SOURCES})
TARGET_LINK_LIBRARIES(RESTServer UniPAX ${QT_QTGUI_LIBRARY})
SET_TARGET_PROPERTIES(RESTServer PROPERTIES COMPILE_FLAGS "${UNIPAX_COMPILE_FLAGS} ${UNIPAX_DATABASE_FLAGS}")
SET_TARGET_PROPERTIES(RESTServer PROPERTIES LINK_FLAGS    "${UNIPAX_LINK_FLAGS}")
