PROJECT(PathwaysOfServerHandler)

INCLUDE(${CMAKE_SOURCE_DIR}/include/PLUGINS/REST/PATHWAYSOFSERVERHANDLER/sources.cmake)

SET(SOURCES
	PathwaysOfServerHandler.cpp
)

IF (database STREQUAL "oracle")
	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
	    ${ODBORACLE_INCLUDE_DIR}
	    ${ORACLE_INCLUDE_DIR}
		${LEMON_INCLUDE_DIR}
		${QT_INCLUDE_DIR}
		${UNIPAX_headers}
	)
ENDIF (database STREQUAL "oracle")

IF (NOT (database STREQUAL "oracle"))

	INCLUDE_DIRECTORIES(
		${Boost_INCLUDE_DIR}
		${ODB_INCLUDE_DIR}
		${ODBBOOST_INCLUDE_DIR}
	    ${ODBMYSQL_INCLUDE_DIR}
		${MYSQL_INCLUDE_DIR}
		${LEMON_INCLUDE_DIR}
		${QT_INCLUDE_DIR}
		${UNIPAX_headers}
	)
ENDIF (NOT (database STREQUAL "oracle"))


SET(DEP_LIBRARIES
	UniPAX
)

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

QT4_WRAP_CPP(MOC_SRCS ${PathwaysOfServerHandler_MOC_HEADERS_LIST} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)

ADD_LIBRARY(PathwaysOfServerHandler SHARED ${SOURCES} ${MOC_SRCS} ${HEADERS_LIST})
TARGET_LINK_LIBRARIES(PathwaysOfServerHandler ${DEP_LIBRARIES})
SET_TARGET_PROPERTIES(PathwaysOfServerHandler PROPERTIES COMPILE_FLAGS "${UNIPAX_COMPILE_FLAGS} ${UNIPAX_DATABASE_FLAGS}")
SET_TARGET_PROPERTIES(PathwaysOfServerHandler PROPERTIES LINK_FLAGS    "${UNIPAX_LINK_FLAGS}")
